# project_dragon

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  conftest.py  pyproject.toml  release.sh  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: Project Dragon Manual.md  db_tools.md  project_dragon_plan.md  project_dragon_plan_v0.1.0.md  project_dragon_plan_v0.2.0.md  smoke_tests.md  ui_icons.md
examples/: audit_exchange_canonicalization.py  bench_runs_list.py  db_query_plan_check.py  db_schema_check.py  ledger_check.py  legacy_blob_inspector.py  normalize_woox_identity.py  pnl_sanity_check.py  postgres_smoke.py  run_backtest_example.py  run_live_woox_smoke.py  sqlite_pragmas_check.py  woox_bbo_smoke_test.py  woox_payload_check.py  woox_positions_check.py  woox_positions_dump.py  woox_reconcile_check.py  woox_smoke_bbo.py
tests/: test_api_resilience.py  test_assets_server_side.py  test_avg_position_time.py  test_backtest_ui_changes.py  test_backtest_worker.py  test_candle_cache.py  test_ccxt_range_limit_inference.py  test_exchange_degraded_entry_block.py  test_exchange_normalization.py  test_htf_ma_mapping.py  test_job_leasing.py  test_max_drawdown_on_margin.py  test_no_legacy_backtest_run_blob_reads.py  test_postgres_backend.py  test_roi_on_margin.py  test_runs_explorer_utils.py  test_runs_server_filters.py  test_save_backtest_run_atomic_details.py  test_sweep_dedupe.py  test_sweep_reconcile.py  test_sweeps_ui_helpers.py  test_time_utils.py  test_trading_accounts.py  test_trading_accounts_create.py  test_ui_page_imports.py
(+41 files in other folders)
